--- a/bilane.css
+++ b/bilane.css
@@ -13,6 +13,49 @@ body
  align-items: center;
  background-color: white;
  color:white;
+
+}
+.gaine{
+width:30%;
+height: 40px;
+color:black;
+border-radius: 5px;
+display: flex;
+justify-content: center;
+flex-direction: column;
+align-items: center;
+position:absolute;
+top:50%;
+}
+.gaine_p{
+    width:30%;
+    display: inline;
+    display: flex;
+justify-content: center;
+align-items: center;
+background-color: white;
+color: black;
+padding:4px 0px;
+border-radius: 8px 8px 0px 0px;
+box-shadow: 0px 5px 20px white;
+}
+.gaine_none{
+    display: none;
+}
+.gaine_b{
+    display: inline;
+    width: 30%;
+background-color: white;
+color: blue;
+border:none;
+padding:4px 0px;
+box-shadow: 0px 5px 10px white;
+border-radius: 0px 0px 8px 8px;
+}
+.gaine_b:hover{
+    letter-spacing: 0.8px;
+    cursor: pointer;
+    text-decoration: underline;
 }
 .foter{
     display: flex;
@@ -31,6 +74,7 @@ body
     padding: 10px;
     /* outline: 2px solid red; */
     gap:10px;
+    position: relative;
 
 }
 .container div
@@ -56,7 +100,6 @@ justify-content: space-evenly;
 .nouveaux
 {
     width: 70px;
-    font-size:11px;
 }
 input{
     width:65px;
@@ -97,8 +140,4 @@ p:hover{
 }
 .flech{
     font-size: 35px;
-
 }
-
-
-
